--- a/Dockerfile_FE
+++ b/Dockerfile_FE
@@ -3,9 +3,7 @@ FROM segment/chamber:2 AS chamber
 
 FROM python:3.7-slim-stretch
 
-RUN apt update && apt-get install -y apache2-utils && apt-get -y install curl
+RUN apt update &&  apt-get install -y apache2-utils netcat && apt-get -y install curl
 
 WORKDIR /code
 COPY . /code
-
-CMD ["tail", "-f", "/dev/null"]
