--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,11 @@ psycopg2-binary==2.8.2
 gunicorn~=20.0.0
 starlette~=0.13.4
 uvicorn~=0.11.5
+hypercorn
 uwsgi~=2.0.0
 aiopg~=1.0.0
+quart
+fastapi
 gevent~=20.5.0
 meinheld~=1.0.1
 falcon~=2.0.0
