added results for quart and flask external

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
           cpus: '2'
           memory: 2GB
     environment:
-      - PWPWORKERS=10
+      - PWPWORKERS=1
     command: >
 
       bash -c "
@@ -73,7 +73,7 @@ services:
         done;
         echo Connected!;
 
-      ./run-external-benchmark.sh"
+      ./run-benchmark.sh"
   external_service:
     build:
       context: .
