added long-running query test for quart and flask

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
           cpus: '2'
           memory: 2GB
     environment:
-      - PWPWORKERS=1
+      - PWPWORKERS=10
     command: >
 
       bash -c "
@@ -72,7 +72,7 @@ services:
           sleep 1;
         done;
         echo Connected!;
-
+      sleep 20;
       ./run-benchmark.sh"
   external_service:
     build:
